added counter component

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,26 +1,44 @@
 {
   "compilerOptions": {
+    // Specify the library files to be included in the compilation
     "lib": ["dom", "dom.iterable", "esnext"],
+    // Allow JavaScript files to be compiled
     "allowJs": true,
+    // Skip type checking of declaration files
     "skipLibCheck": true,
+    // Enable all strict type-checking options
     "strict": true,
+    // Do not emit outputs
     "noEmit": true,
+    // Enable interoperability between CommonJS and ES Modules
     "esModuleInterop": true,
+    // Specify the module code generation
     "module": "esnext",
+    // Specify module resolution strategy
     "moduleResolution": "bundler",
+    // Include modules imported with .json extension
     "resolveJsonModule": true,
+    // Treat each file as a separate module
     "isolatedModules": true,
+    // Specify JSX code generation
     "jsx": "preserve",
+    // Enable incremental compilation
     "incremental": true,
+    // Specify plugins to use
     "plugins": [
       {
-        "name": "next"
+        "name": "next" // Next.js plugin
       }
     ],
+    // Specify path mapping for module resolution
     "paths": {
       "@/*": ["./*"]
-    }
+    },
+    // Specify type definitions to include
+    "types": ["@types/prop-types"]
   },
+  // Specify files to include in the compilation
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  // Specify files to exclude from the compilation
   "exclude": ["node_modules"]
 }
